--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@supabase/supabase-js": "^2.43.4",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.43.5",
     "@tanstack/react-query": "^5.45.0",
     "@tanstack/react-table": "^8.17.3",
     "axios": "^1.7.2",
