--- a/.eslintrc
+++ b/.eslintrc
@@ -29,12 +29,16 @@
   ],
   "plugins": ["simple-import-sort", "prettier"],
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": ["error", { "singleQuote": true }],
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "simple-import-sort/imports": "error",
     "simple-import-sort/exports": "error",
+    "react-hooks/exhaustive-deps": "off",
+    "jsx-a11y/label-has-associated-control": "off",
+    "jsx-a11y/heading-has-content": "off",
+    "react/no-unescaped-entities": "off",
   },
 }
