--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier:fix": "prettier --write .",
+    "lint:fix": "eslint --fix ."
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
@@ -18,6 +20,7 @@
     "@supabase/supabase-js": "^2.43.5",
     "@tanstack/react-query": "^5.45.0",
     "@tanstack/react-table": "^8.17.3",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -39,6 +42,7 @@
     "eslint-config-next": "14.2.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "postcss": "^8",
     "prettier": "^3.3.2",
     "tailwindcss": "^3.4.1",
